--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview:root": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
@@ -32,4 +33,3 @@
     "vite": "^5.4.0"
   }
 }
-
